[package]
name = "process_ghost"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winbase","fileapi","ntdef","winnt","guiddef","minwindef","handleapi","basetsd","memoryapi","processthreadsapi","synchapi","processenv","errhandlingapi","ntstatus","userenv"] }
ntapi = "0.3.6"
widestring = "0.5.1"